--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             socket.on('chat message', function(msg){
                 $('#messages').append($('<li>').text(msg));
             });
+            socket.on('joining', function(msg){
+                $('#messages').append($('<li style="color:rgb(80, 80, 80)">').text(msg));
+            });
+            socket.on('leaving', function(msg){
+                $('#messages').append($('<li>').text(msg));
+            });
         </script>
     </body>
 </html>
