--- a/index.html
+++ b/index.html
@@ -5,34 +5,59 @@
         <title>Socket.IO chat</title>
         <style>
             * { margin: 0; padding: 0; box-sizing: border-box; }
-            body { font: 13px Helvetica, Arial; }
-            form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-            form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-            form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+            body { font: 13px Helvetica, Arial; } html, body { width: 100%; height: 100%; }
+            form.chat { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+            form.chat input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+            form.chat button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
             #messages { list-style-type: none; margin: 0; padding: 0; }
             #messages li { padding: 5px 10px; }
             #messages li:nth-child(odd) { background: #eee; }
+
+            div.modal { position: fixed; z-index: 10; width: 100%; height: 100%; background-color: rgba(30, 30, 30, 0.5); }
+            form.name { width: 500px; height: 100px; background-color: #FFF; border: 1px solid #303030; margin: 20% auto; }
+            form.name h1 { text-align: center; margin-top: 2%; }
+            form.name input { width: 75%; padding: 5px; margin: 2%; font-size: 20px; }
+            form.name button { width: 19%; border: none; background-color: #aaa; padding: 10px; }
         </style>
     </head>
     <body>
         <ul id="messages"></ul>
-        <form action="">
+        <form class="chat" action="">
             <input id="m" autocomplete="off" /><button>Send</button>
         </form>
+        <div class="modal">
+            <form class="name" action="index.html">
+                <h1> What is your name? </h1>
+                <input id="nick" type="text" /><button>O.K.</button>
+            </form>
+        </div>
         <script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
+            // 서버와 소켓 통신 연결
             var socket = io();
-            $('form').submit(function(e){
-                socket.emit('chat message', $('#m').val());
+
+            // 입력 받은 닉네임 저장 및 서버로 송신
+            var name;
+            $('form.name').on('submit', function(e){
+                name =  $('#nick').val();
+                socket.emit('join', name);
+                $('.modal').remove();
+                return false;
+            });
+            // 입력 받은 메시지 서버로 송신
+            $('form.chat').submit(function(e){
+                socket.emit('chat message', {name: name, msg: $('#m').val()});
                 $('#m').val('');
                 return false;
             });
+
+            // 서버로 부터 메시지 수신
             socket.on('chat message', function(msg){
                 $('#messages').append($('<li>').text(msg));
             });
             socket.on('joining', function(msg){
-                $('#messages').append($('<li style="color:rgb(80, 80, 80)">').text(msg));
+                $('#messages').append($('<li style="color:rgb(50, 90, 256)">').text(msg));
             });
             socket.on('leaving', function(msg){
                 $('#messages').append($('<li>').text(msg));
