1. 자신이 보낸 메시지는 서버에서 받지 않고 표시 처리. 2. 자신이 보낸 메시지는 색상으로 구분

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             // 입력 받은 메시지 서버로 송신
             $('form.chat').submit(function(e){
                 socket.emit('chat message', {name: name, msg: $('#m').val()});
+                // 입력 받은 메시지 표시
+                $('#messages').append($('<li style="color:rgb(0,90,90)">').text(name + ": " + $('#m').val()));
                 $('#m').val('');
                 return false;
             });
