--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
         <style>
             * { margin: 0; padding: 0; box-sizing: border-box; }
             body { font: 13px Helvetica, Arial; } html, body { width: 100%; height: 100%; }
-            form.chat { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+            form.chat { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; height: 50px;}
             form.chat input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
             form.chat button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
             #messages { list-style-type: none; margin: 0; padding: 0; }
             #messages li { padding: 5px 10px; }
             #messages li:nth-child(odd) { background: #eee; }
 
-            div.modal { position: fixed; z-index: 10; width: 100%; height: 100%; background-color: rgba(30, 30, 30, 0.5); }
+            div.status { position: fixed; color: #aaa; bottom: 55px; width: 100%;}
+
+            div.modal { position: fixed; top:0; left:0; z-index: 10; width: 100%; height: 100%; background-color: rgba(30, 30, 30, 0.5); }
             form.name { width: 500px; height: 100px; background-color: #FFF; border: 1px solid #303030; margin: 20% auto; }
             form.name h1 { text-align: center; margin-top: 2%; }
             form.name input { width: 75%; padding: 5px; margin: 2%; font-size: 20px; }
@@ -22,9 +24,11 @@
     </head>
     <body>
         <ul id="messages"></ul>
+        <div class="status"></div>
         <form class="chat" action="">
             <input id="m" autocomplete="off" /><button>Send</button>
         </form>
+
         <div class="modal">
             <form class="name" action="index.html">
                 <h1> What is your name? </h1>
@@ -54,15 +58,28 @@
                 return false;
             });
 
+            // 타이핑 상태 메시지
+            $('#m').on('focus', function(e){
+                socket.emit('on typing', {name: name});
+            }).on('blur', function(e){
+                socket.emit('off typing');
+            });
+
             // 서버로 부터 메시지 수신
             socket.on('chat message', function(msg){
                 $('#messages').append($('<li>').text(msg));
             });
-            socket.on('joining', function(msg){
-                $('#messages').append($('<li style="color:rgb(50, 90, 256)">').text(msg));
+            socket.on('joining', function(alarm){
+                $('#messages').append($('<li style="color:rgb(50, 90, 256)">').text(alarm));
             });
-            socket.on('leaving', function(msg){
-                $('#messages').append($('<li style="color:rgb(256, 90, 50)">').text(msg));
+            socket.on('leaving', function(alarm){
+                $('#messages').append($('<li style="color:rgb(256, 90, 50)">').text(alarm));
+            });
+            socket.on('on typing', function(status){
+                $('div.status').text(status + ' is typing...');
+            });
+            socket.on('off typing', function(status){
+                $('div.status').text('');
             });
         </script>
     </body>
