--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <style>
             * { margin: 0; padding: 0; box-sizing: border-box; }
             body { font: 13px Helvetica, Arial; } html, body { width: 100%; height: 100%; }
+
+            div.window { width: 100%; height: 100%; padding-bottom: 50px; }
+            div.msg_window {display: inline-block; vertical-align: top; border: 3px solid #333; width: 80%; height: 100%;}
+            div.usr_window {display: inline-block; vertical-align: top; border: 3px solid #333; width: 20%; height: 100%;}
+
             form.chat { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; height: 50px;}
             form.chat input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
             form.chat button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
@@ -16,25 +21,35 @@
             div.status { position: fixed; color: #aaa; bottom: 55px; width: 100%;}
 
             div.modal { position: fixed; top:0; left:0; z-index: 10; width: 100%; height: 100%; background-color: rgba(30, 30, 30, 0.5); }
-            form.name { width: 500px; height: 100px; background-color: #FFF; border: 1px solid #303030; margin: 20% auto; }
+            form.name { position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -250px; width: 500px; height: 100px; background-color: #FFF; border: 1px solid #303030;}
             form.name h1 { text-align: center; margin-top: 2%; }
             form.name input { width: 75%; padding: 5px; margin: 2%; font-size: 20px; }
             form.name button { width: 19%; border: none; background-color: #aaa; padding: 10px; }
+
+            div.usr_window h1 { text-align: center; font-size: 20px; font-weight: 400; background-color: #aaa;}
         </style>
     </head>
     <body>
-        <ul id="messages"></ul>
-        <div class="status"></div>
+        <div class="window">
+            <div class="msg_window">
+                <ul id="messages"></ul>
+                <div class="status"></div>
+            </div
+            ><div class="usr_window">
+                <h1>online user</h1>
+                <ul></ul>
+            </div>
+        </div>
         <form class="chat" action="">
             <input id="m" autocomplete="off" /><button>Send</button>
         </form>
-
         <div class="modal">
             <form class="name" action="index.html">
                 <h1> What is your name? </h1>
                 <input id="nick" type="text" /><button>O.K.</button>
             </form>
         </div>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
