--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             div.status { position: fixed; color: #aaa; bottom: 55px; width: 100%;}
 
             div.modal { position: fixed; top:0; left:0; z-index: 10; width: 100%; height: 100%; background-color: rgba(30, 30, 30, 0.5); }
-            form.name { position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -250px; width: 500px; height: 100px; background-color: #FFF; border: 1px solid #303030;}
-            form.name h1 { text-align: center; margin-top: 2%; }
-            form.name input { width: 75%; padding: 5px; margin: 2%; font-size: 20px; }
-            form.name button { width: 19%; border: none; background-color: #aaa; padding: 10px; }
+            div.modal form { position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -250px; width: 500px; height: 100px; background-color: #FFF; border: 1px solid #303030;}
+            div.modal form h1 { text-align: center; margin-top: 2%; }
+            div.modal form input { width: 75%; padding: 5px; margin: 2%; font-size: 20px; }
+            div.modal form button { width: 19%; border: none; background-color: #aaa; padding: 10px; }
 
             div.usr_window h1 { text-align: center; font-size: 20px; font-weight: 400; background-color: #aaa;}
         </style>
@@ -44,9 +44,9 @@
             <input id="m" autocomplete="off" /><button>Send</button>
         </form>
         <div class="modal">
-            <form class="name" action="index.html">
+            <form id="new" class="name" action="index.html">
                 <h1> What is your name? </h1>
-                <input id="nick" type="text" /><button>O.K.</button>
+                <input id="newNick" type="text" /><button>O.K.</button>
             </form>
         </div>
 
@@ -58,19 +58,19 @@
 
             // 입력 받은 닉네임 저장 및 서버로 송신
             var name;
-            $('form.name').on('submit', function(e){
-                name =  $('#nick').val();
+            $('#new').on('submit', function(e){
+                e.preventDefault();
+                name =  $('#newNick').val();
                 socket.emit('join', name);
                 $('.modal').remove();
-                return false;
             });
+
             // 입력 받은 메시지 서버로 송신
             $('form.chat').submit(function(e){
                 socket.emit('chat message', {name: name, msg: $('#m').val()});
                 // 입력 받은 메시지 표시
                 $('#messages').append($('<li style="color:rgb(30, 50, 100)">').text(name + ": " + $('#m').val()));
                 $('#m').val('');
-                return false;
             });
 
             // 타이핑 상태 메시지
@@ -83,14 +83,7 @@
             // 서버로 부터 메시지 수신
             socket.on('refresh', function(data){
                 var list = data;
-                $('#user_list').empty();
-                list.forEach(function(item, index){
-                    if(socket.id === item.id) {
-                        $('#user_list').append('<li style="color:rgb(30, 50, 100)">'+item.name+'(나)</li>');
-                    }else {
-                        $('#user_list').append('<li>'+item.name+'</li>');
-                    }
-                });
+                getList(list);
             });
             socket.on('chat message', function(msg){
                 $('#messages').append($('<li>').text(msg));
@@ -98,27 +91,13 @@
             socket.on('joining', function(alarm){
                 $('#messages').append($('<li style="color:rgb(50, 90, 256)">').text(alarm.msg));
                 var list = alarm.list;
-                $('#user_list').empty();
-                list.forEach(function(item, index){
-                    if(socket.id === item.id) {
-                        $('#user_list').append('<li style="color:rgb(30, 50, 100)">'+item.name+'(나)</li>');
-                    }else {
-                        $('#user_list').append('<li>'+item.name+'</li>');
-                    }
-                });
+                getList(list);
             });
 
             socket.on('leaving', function(alarm){
                 $('#messages').append($('<li style="color:rgb(256, 90, 50)">').text(alarm.msg));
                 var list = alarm.list;
-                $('#user_list').empty();
-                list.forEach(function(item, index){
-                    if(socket.id === item.id) {
-                        $('#user_list').append('<li style="color:rgb(30, 50, 100)">'+item.name+'(나)</li>');
-                    }else {
-                        $('#user_list').append('<li>'+item.name+'</li>');
-                    }
-                });
+                getList(list);
             });
             socket.on('on typing', function(status){
                 $('div.status').text(status + ' is typing...');
@@ -126,6 +105,49 @@
             socket.on('off typing', function(status){
                 $('div.status').text('');
             });
+
+            socket.on('changing nick', function(data){
+                $('#messages').append($('<li style="color:rgb(50, 90, 256)">').text(data.msg));
+                var list = data.list;
+                getList(list);
+            });
+
+            /**
+             * 온라인 상태 유저 목록 표시 함수
+             * target: 서버로부터 받은 리스트
+             */
+            function getList(target){
+                $('#user_list').empty();
+                target.forEach(function(item, index){
+                    if(socket.id === item.id) {
+                        $('#user_list').append('<li id="'+item.id+'" style="color:rgb(30, 50, 100)">'+item.name+'(나)</li>');
+                    }else {
+                        $('#user_list').append('<li id="'+item.id+'">'+item.name+'</li>');
+                    }
+                });
+                addChange();
+            }
+
+            // 닉네임 변경 부분 이벤트 리스너
+            function addChange(){
+                $('#'+socket.id).on('click', function(e){
+                    $('body').append(
+                        '<div class="modal">'
+                            +'<form id="change" class="name" action="index.html">'
+                                +'<h1> Change the nickname? </h1>'
+                                +'<input id="changeNick" type="text" /><button>O.K.</button>'
+                            +'</form>'
+                        +'</div>'
+                    );
+
+                    $('#change').on('submit', function(e){
+                        e.preventDefault();
+                        name =  $('#changeNick').val();
+                        socket.emit('change nick', name);
+                        $('.modal').remove();
+                    });
+                });
+            }
         </script>
     </body>
 </html>
