--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             });
 
             // 입력 받은 메시지 서버로 송신
-            $('form.chat').submit(function(e){
+            $('form.chat').on('submit', function(e){
                 e.preventDefault();
                 socket.emit('chat message', {name: name, msg: $('#m').val()});
                 // 입력 받은 메시지 표시
